src/styles.css
* {
	box-sizing: border-box;
}

:root {
	font-family: system-ui, sans-serif;
}

.canvas {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
}

.controls {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100vw;
	padding: 1em;
	display: flex;
	flex-direction: row;
	justify-content: center;
	gap: 1em;
	pointer-events: none;
	user-select: none;
}

.controls > * {
	pointer-events: auto;
}

.controlGroup {
	display: none;
	flex-direction: row;
	border-radius: 8px;
	box-shadow: 0 0 8px rgb(0 0 0 / 50%);
	overflow: hidden;
}

.visibleControlGroup {
	display: flex;
}

.controlGroup > * {
	background-color: white;
	padding: 0.5em 1em;
	cursor: pointer;
}

.controlGroup > :not(:last-child) {
	border-right: 1px solid gray;
}

.controlGroup > :hover {
	background-color: #EEEEEE;
}

.activeControl {
	background-color: #4980FF;
	color: white;
}

.activeControl:hover {
	background-color: #6493FF;
}

